# poetry-demo

./: .seal-actions.yml  pyproject.toml  requirements.txt
