[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor6801",email = "Victor6801@github.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (==4.2.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "yapf (>=0.43.0,<0.44.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-env (>=1.3.2,<2.0.0)",
    "pytest-sugar (>=1.1.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
